--- a/People.html
+++ b/People.html
@@ -1,3 +1,4 @@
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>연세대학교 금융기술센터</title>
