--- a/People.html
+++ b/People.html
@@ -4,7 +4,7 @@
 <title>연세대학교 금융기술센터</title>
 <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css" />
 <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-<link rel="SHORTCUT ICON" type="image/x-icon" href="./images/symbol_01.ico"/>
+<link rel="SHORTCUT ICON" type="image/x-icon" href="symbol_01.ico"/>
 <style type="text/css">
 </style>
 <style>
