--- a/Intro.html
+++ b/Intro.html
@@ -27,7 +27,7 @@
 	<div id="menu">
 		<ul>
 			<li class="current_page_item"><a href="Intro.html"><b>Intro</b></a></li>
-			<li><a class="menuLink" href="people.html"><b>People</b></a></li>
+			<li><a class="menuLink" href="People.html"><b>People</b></a></li>
 		</ul>
 
 	</div>
