--- a/People.html
+++ b/People.html
@@ -20,7 +20,7 @@
 <div id="wrapper">
 	<div id="header">
 		<div id="logo">
-			<h1><a href="https://matheco501.github.io/matheco/Intro.html"><font face="malgun gothic"><b><img src ="images/symbol_01.jpg" height="60" style="vertical-align:text-bottom">금융기술센터</b></font></a></h1>
+			<h1><a href="https://matheco501.github.io/matheco/Intro.html"><font face="malgun gothic"><b><img src ="images/symbol.png" height="60" style="vertical-align:text-bottom">금융기술센터</b></font></a></h1>
 		</div>
 	</div>
 	<!-- end #header -->
@@ -51,7 +51,7 @@
 
 </div>
 <div id="footer">
-	<p><img src="images/symbol_01.jpg" width=130></p>
+	<p><img src="images/symbol_name.png" width=130></p>
 	<p>Copyright (c) 연세대학교 금융기술센터. All rights reserved.</p>
 </div>
 <!-- end #footer -->
