--- a/People.html
+++ b/People.html
@@ -47,8 +47,229 @@
 		<br/>
 	</div>
 
-	
+		<h2><img src="images/box/3.png" style="vertical-align:text-middle">&nbsp;<b>참여 전임교원</b></h2>
+		<br/>
+		<div id="two-columns">
+			<div id="col1">
+				<h3><b>박태영 </b></h3>
+				<br/>
+				<img src="images/parkt.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>연세대학교 응용통계학과 교수</b><br/>
+				<b>전문분야: 데이터 사이언스, 베이지안 통계학
+				<br/>
+			</div>
+			<div id="col2">
+				<h3><b>장수령</b></h3>
+				<br/>
+				<img src="images/jangs.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>연세대학교 경영학과 조교수</b><br/>
+				<b>전문분야: 소비자-기업 행동모델, 빅데이터 분석
+			</div>
+		</div>
+		
+		<div id="two-columns">
+			<div id="col1">
+				<h3><b>장한울</b></h3>
+				<br/>
+				<img src="images/prof/KimKK.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>연세대학교 산업공학과 박사후연구원</b><br/>
+				<b>전문분야: 부동산 경제, 도시계획, 거시경제
+				<br/>
+			</div>	
+		<h2><img src="images/box/3.png" style="vertical-align:text-middle">&nbsp;<b>외부 전문가</b></h2>
+		<br/>
+		<div id="two-columns">
+			<div id="col1">
+				<h3><b>최문섭</b></h3>
+				<br/>
+				<img src="images/choim.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>이화여자대학교 부교수</b><br/>
+				<b>전문분야: 시장 미시구조, 기업재무, 자산가격 평가
+				</p>
+				<br/>
+			</div>
+			<div id="col2">
+				<h3><b>손성빈</b></h3>
+				<br/>
+				<img src="images/sohns.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>북경대학교 교수</b><br/>
+				<b>전문분야: 자산가격 결정이론, 암호화폐
+			</div>
+		</div>
+		
+		<div id="two-columns">
+			<div id="col1">
+				<h3><b>Domenico Tarzia</b></h3>
+				<br/>
+				<img src="images/domenico.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>북경대학교 교수</b><br/>
+				<br/>
+			</div>
+			<div id="col2">
+				<h3><b>김동신</b></h3>
+				<br/>
+				<img src="images/people/4-4.PNG" border="0" height="162px">
+				<br/>
+				<p>
+				<b>Pepperdine University 교수</b><br/>
+				<b>전문분야: 부동산 금융
+				<br/>
+			</div>
+		</div>
+		
+		<div id="two-columns">
+			<div id="col1">
+				<h3><b>김화환</b></h3>
+				<br/>
+				<img src="images/h.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>전남대학교 교수</b><br/>
+				<b>전문분야: Remote Sensing, GIS, 공간통계
+				<br/>
+			</div>
+			<div id="col2">
+				<h3><b>박성필</b></h3>
+				<br/>
+				<img src="images/parks.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>KAIST 교수</b><br/>
+				<b>전문분야: 지식재산권법, 회사법
+				<br/>
+			</div>
+		</div>
+		
+		<div id="two-columns">
+			<div id="col1">
+				<h3><b>전주영</b></h3>
+				<br/>
+				<img src="images/jeonj.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>KAIST 교수</b><br/>
+				<b>전문분야: 예측모델, 금융모델
+				<br/>
+			</div>
+			<div id="col2">
+				<h3><b>김우창</b></h3>
+				<br/>
+				<img src="images/kimw.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>KAIST 교수</b><br/>
+				<b>전문분야: 금융최적화모델, 포트폴리오 이론, 투자관리
+				<br/>
+			</div>
+		</div>
 
+		<div id="two-columns">
+			<div id="col1">
+				<h3><b>다니엘 김</b></h3>
+				<br/>
+				<img src="images/blank.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>중앙대학교 교수</b><br/>
+				<b>전문분야: 기업금융
+				<br/>
+			</div>
+			<div id="col2">
+				<h3><b>설홍기</b></h3>
+				<br/>
+				<img src="images/kimw.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>중앙대학교 교수</b><br/>
+				<b>전문분야: 금융최적화모델, 포트폴리오 이론, 투자관리
+				<br/>
+			</div>
+		</div>
+
+		<div id="two-columns">
+			<div id="col1">
+				<h3><b>김홍곤</b></h3>
+				<br/>
+				<img src="images/kimh.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>KB자산운용 상무</b><br/>
+				<b>전문분야: 주식운용, 인덱스퀀트운용
+				<br/>
+			</div>
+			<div id="col2">
+				<h3><b>유인욱</b></h3>
+				<br/>
+				<img src="images/blank.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>한국거래소 부장</b><br/>
+				<b>전문분야: KRX Academy 증권시장 교육, 선물주식 개발
+				<br/>
+			</div>
+		</div>
+
+		<div id="two-columns">
+			<div id="col1">
+				<h3><b>김두영</b></h3>
+				<br/>
+				<img src="images/kimd.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>NH-Amundi자산운용 본부장</b><br/>
+				<b>전문분야: 해외주식,채권,외환,원자재 투자
+				<br/>
+			</div>
+			<div id="col2">
+				<h3><b>박광열</b></h3>
+				<br/>
+				<img src="images/blank.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>파인밸류자산운용 부사장</b><br/>
+				<b>전문분야: 주식,메쟈닌,리츠 투자
+				<br/>
+			</div>
+		</div>
+
+		<div id="two-columns">
+			<div id="col1">
+				<h3><b>안효재</b></h3>
+				<br/>
+				<img src="images/blank.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>KB증권 이사</b><br/>
+				<b>전문분야: 부동산 개발금융, 실물부동산 투자
+				<br/>
+			</div>
+			<div id="col2">
+				<h3><b>조기환</b></h3>
+				<br/>
+				<img src="images/blank.jpg" border="0" height="162px">
+				<br/>
+				<p>
+				<b>스팍스자산운용 본부장</b><br/>
+				<b>전문분야: 컴플라이언스, 리스크 관리
+				<br/>
+			</div>
+		</div>
+	</div>
+
+					
+					
 </div>
 <div id="footer">
 	<p><img src="images/symbol_name.png" width=130></p>
