--- a/People.html
+++ b/People.html
@@ -47,7 +47,7 @@
 		<br/>
 	</div>
 
-		<h2><img src="images/box/3.png" style="vertical-align:text-middle">&nbsp;<b>참여 전임교원</b></h2>
+		<h2><img src="images/3.png" style="vertical-align:text-middle">&nbsp;<b>참여 전임교원</b></h2>
 		<br/>
 		<div id="two-columns">
 			<div id="col1">
@@ -82,7 +82,7 @@
 				<b>전문분야: 부동산 경제, 도시계획, 거시경제
 				<br/>
 			</div>	
-		<h2><img src="images/box/3.png" style="vertical-align:text-middle">&nbsp;<b>외부 전문가</b></h2>
+		<h2><img src="images/3.png" style="vertical-align:text-middle">&nbsp;<b>외부 전문가</b></h2>
 		<br/>
 		<div id="two-columns">
 			<div id="col1">
