--- a/People.html
+++ b/People.html
@@ -75,13 +75,15 @@
 			<div id="col1">
 				<h3><b>장한울</b></h3>
 				<br/>
-				<img src="images/prof/KimKK.jpg" border="0" height="162px">
+				<img src="images/jangh.jpg" border="0" height="162px">
 				<br/>
 				<p>
 				<b>연세대학교 산업공학과 박사후연구원</b><br/>
 				<b>전문분야: 부동산 경제, 도시계획, 거시경제
 				<br/>
 			</div>	
+		</div>
+
 		<h2><img src="images/3.png" style="vertical-align:text-middle">&nbsp;<b>외부 전문가</b></h2>
 		<br/>
 		<div id="two-columns">
@@ -120,7 +122,7 @@
 			<div id="col2">
 				<h3><b>김동신</b></h3>
 				<br/>
-				<img src="images/people/4-4.PNG" border="0" height="162px">
+				<img src="images/kimds.jpg" border="0" height="162px">
 				<br/>
 				<p>
 				<b>Pepperdine University 교수</b><br/>
