--- a/People.html
+++ b/People.html
@@ -90,7 +90,7 @@
 			<div id="col1">
 				<h3><b>최문섭</b></h3>
 				<br/>
-				<img src="images/choim.jpg" border="0" height="162px">
+				<img src="images/choim.png" border="0" height="162px">
 				<br/>
 				<p>
 				<b>이화여자대학교 부교수</b><br/>
