--- a/People.html
+++ b/People.html
@@ -83,7 +83,7 @@
 				<br/>
 			</div>	
 		</div>
-
+		<br/>
 		<h2><img src="images/3.png" style="vertical-align:text-middle">&nbsp;<b>외부 전문가</b></h2>
 		<br/>
 		<div id="two-columns">
@@ -117,6 +117,7 @@
 				<br/>
 				<p>
 				<b>북경대학교 교수</b><br/>
+				<b>전문분야: 옵션가격 결정이론, 금융모델, 통계적 
 				<br/>
 			</div>
 			<div id="col2">
