--- a/Intro.html
+++ b/Intro.html
@@ -28,6 +28,7 @@
 		<ul>
 			<li class="current_page_item"><a href="Intro.html"><b>Intro</b></a></li>
 			<li><a class="menuLink" href="People.html"><b>People</b></a></li>
+			<li><a class="menuLink" href="Publications.html"><b>Publications</b></a></li>
 		</ul>
 
 	</div>
