--- a/People.html
+++ b/People.html
@@ -28,6 +28,7 @@
 		<ul>
 			<li><a class="menuLink" href="Intro.html"><b>Intro</b></a></li>
 			<li class="current_page_item"><a href="People.html"><b>People</b></a></li>
+			<li><a class="menuLink" href="Publications.html"><b>Publications</b></a></li>
 		</ul>
 	</div>
 	<!-- end #header -->
