--- a/Publications.html
+++ b/Publications.html
@@ -35,7 +35,7 @@
 	
 	<div id="page">
 		<br/>
-		<h3><b><a href="https://orcid.org/0000-0003-3611-183X" target="_blank">Publications - Kwangwon Ahn</a>
+		<h3><b><a href="https://orcid.org/0000-0003-3611-183 height="162px"X" target="_blank">Publications - Kwangwon Ahn</a>
 		<a href="https://orcid.org/0000-0003-3611-183X"><img src="images/orcid.png"/></a>
 		<br/>
 	</div>
