--- a/Publications.html
+++ b/Publications.html
@@ -34,9 +34,10 @@
 	<!-- end #header -->
 	
 	<div id="page">
+		<h2>
 		<br/>
-		<h3><b><a href="https://orcid.org/0000-0003-3611-183 height="162px"X" target="_blank">Publications - Kwangwon Ahn</a>
-		<a href="https://orcid.org/0000-0003-3611-183X"><img src="images/orcid.png"/></a>
+		<h3><b><a href="https://orcid.org/0000-0003-3611-183X" target="_blank">Publications - Kwangwon Ahn</a>
+		<a href="https://orcid.org/0000-0003-3611-183X"><img src="images/orcid.png" border="0" height="162px"></a>
 		<br/>
 	</div>
 
