--- a/Publications.html
+++ b/Publications.html
@@ -36,7 +36,9 @@
 	<div id="page">
 		<h2><br/>
 		<h3><b><a href="https://orcid.org/0000-0003-3611-183X" target="_blank">Publications - Kwangwon Ahn</a><br/>
+		<div style="text-align:center;">
 		<a href="https://orcid.org/0000-0003-3611-183X"><img src="images/orcid.png" border="0" height="540px"></a>
+		</div>
 		<br/>
 	</div>
 
