--- a/People.html
+++ b/People.html
@@ -193,7 +193,7 @@
 			<div id="col2">
 				<h3><b>설홍기</b></h3>
 				<br/>
-				<img src="images/kimw.jpg" border="0" height="162px">
+				<img src="images/seolh.jpg" border="0" height="162px">
 				<br/>
 				<p>
 				<b>중앙대학교 교수</b><br/>
