--- a/Publications.html
+++ b/Publications.html
@@ -34,9 +34,10 @@
 	<!-- end #header -->
 	
 	<div id="page">
+		<div style="text-align : center;">
 		<h2><br/>
-		<h3><b><a href="https://orcid.org/0000-0003-3611-183X" target="_blank">Publications - Kwangwon Ahn</a><br/>
-		<div style="text-align:center;">
+		<h3><b><a href="https://orcid.org/0000-0003-3611-183X" target="_blank">Publications - Kwangwon Ahn</a>
+		<br/>
 		<a href="https://orcid.org/0000-0003-3611-183X"><img src="images/orcid.png" border="0" height="540px"></a>
 		</div>
 		<br/>
