--- a/Publications.html
+++ b/Publications.html
@@ -13,6 +13,10 @@
         }
 </style>
 
+<style>
+img { display : block;
+margin : auto;}
+</style>
 
 </head>
 
@@ -36,8 +40,7 @@
 	<div id="page">
 		<div style="text-align : center;">
 		<h2><br/>
-		<h3><b><a href="https://orcid.org/0000-0003-3611-183X" target="_blank">Publications - Kwangwon Ahn</a>
-		<br/>
+		<h3><b><a href="https://orcid.org/0000-0003-3611-183X" target="_blank">Publications - Kwangwon Ahn</a><br/>
 		<a href="https://orcid.org/0000-0003-3611-183X"><img src="images/orcid.png" border="0" height="540px"></a>
 		</div>
 		<br/>
