--- a/People.html
+++ b/People.html
@@ -38,7 +38,7 @@
 		<br/>
 		<h3><b>안광원
 		<br/>
-		<img src="images/ahnk.jpg" border="0">
+		<img src="images/ahnk.jpg" border="0" height="162px">
 		<br/>
 		<p>
 		<b>연세대학교 산업공학과 조교수</b><br/>
