--- a/People.html
+++ b/People.html
@@ -36,6 +36,8 @@
 	<div id="page">
 		<h2><img src="images/3.png" style="vertical-align:text-middle">&nbsp;<b>센터장</b></h2>
 		<br/>
+		<div id="two-columns">
+		<div id="col1">
 		<h3><b>안광원
 		<br/>
 		<img src="images/ahnk.jpg" border="0" height="162px">
@@ -46,6 +48,8 @@
 		<b>E-mail :</b> k.ahn@yonsei.ac.kr<br/>
 		<b>Tel :</b> +82-2-2123-4017<br/></p>
 		<br/>
+		</div>
+		</div>
 	</div>
 
 		<h2><img src="images/3.png" style="vertical-align:text-middle">&nbsp;<b>참여 전임교원</b></h2>
