--- a/People.html
+++ b/People.html
@@ -33,7 +33,7 @@
 	</div>
 	<!-- end #header -->
 	
-
+	<div id="page">
 		<h2><img src="images/3.png" style="vertical-align:text-middle">&nbsp;<b>센터장</b></h2>
 		<br/>
 		<h3><b>안광원
@@ -270,7 +270,6 @@
 			</div>
 		</div>
 	</div>
-
 					
 					
 </div>
