--- a/Publications.html
+++ b/Publications.html
@@ -35,8 +35,8 @@
 	
 	<div id="page">
 		<div style="text-align : center;">
-		<h2><br/>
-		<h3><b><a href="https://orcid.org/0000-0003-3611-183X" target="_blank">Publications - Kwangwon Ahn</a><br/><br/>
+		<br/><br/>
+		<h3><b><a href="https://orcid.org/0000-0003-3611-183X" target="_blank">Publications - Kwangwon Ahn</a><br/><br/></h3>
 		<a href="https://orcid.org/0000-0003-3611-183X"><img src="images/orcid.png" border="0" height="250px"></a>
 		</div>
 		<br/>
