--- a/People.html
+++ b/People.html
@@ -36,7 +36,7 @@
 	<div id="page">
 		<h2><img src="images/3.png" style="vertical-align:text-middle">&nbsp;<b>센터장</b></h2>
 		<br/>
-		<h3><b>안광원</h3>
+		<h3><b>안광원</b></h3>
 		<br/>
 		<img src="images/ahnk.jpg" border="0" height="162px">
 		<br/><br/>
