--- a/People.html
+++ b/People.html
@@ -269,6 +269,28 @@
 				<br/>
 			</div>
 		</div>
+		<div id="two-columns">
+			<div id="col1">
+				<h3><b>정의철</b></h3>
+				<br/>
+				<img src="images/blank.jpg" border="0" height="162px">
+				<br/><br/>
+				<p>
+				<b>소속</b><br/>
+				<b>전문분야 :</b> 전문분야
+				<br/>
+			</div>
+			<div id="col2">
+				<h3><b>이희철</b></h3>
+				<br/>
+				<img src="images/blank.jpg" border="0" height="162px">
+				<br/><br/>
+				<p>
+				<b>서속</b><br/>
+				<b>전문분야 :</b> 컴플라이언스, 리스크 관리
+				<br/>
+			</div>
+		</div>
 	</div>
 					
 					
