--- a/People.html
+++ b/People.html
@@ -287,7 +287,7 @@
 				<br/><br/>
 				<p>
 				<b>서속</b><br/>
-				<b>전문분야 :</b> 컴플라이언스, 리스크 관리
+				<b>전문분야 :</b> 전문분야
 				<br/>
 			</div>
 		</div>
