--- a/Publications.html
+++ b/Publications.html
@@ -29,7 +29,7 @@
 			<li><a class="menuLink" href="Intro.html"><b>Intro</b></a></li>
 			<li><a class="menuLink" href="Working_Paper.html"><b>Working Paper</b></a></li>
 			<li><a class="menuLink" href="People.html"><b>People</b></a></li>
-			<li class="current_page_item"><a href="Publications.html"><b>Publications</b></a></li>
+			<li class="current_page_item"><a href="Publication.html"><b>Publication</b></a></li>
 			<li><a class="menuLink" href="Project.html"><b>Project</b></a></li>
 		</ul>
 	</div>
