--- a/People.html
+++ b/People.html
@@ -26,10 +26,10 @@
 	<!-- end #header -->
 	<div id="menu">
 		<ul>
-			<li><a class="menuLink"><a href="Intro.html"><b>Intro</b></a></li>
-			<li><a class="menuLink"><a href="Working_Paper.html"><b>Working Paper</b></a></li>
-			<li class="current_page_item"><a href="People.html"><b>People</b></a></li>
-			<li><a class="menuLink" href="Publication.html"><b>Publication</b></a></li>
+			<li><a class="menuLink" href="Intro.html"><b>Intro</b></a></li>
+			<li class="current_page_item"><a href="Working_Paper.html"><b>Working Paper</b></a></li>
+			<li><a class="menuLink" href="People.html"><b>People</b></a></li>
+			<li><a class="menuLink" href="Publications.html"><b>Publication</b></a></li>
 			<li><a class="menuLink" href="Project.html"><b>Project</b></a></li>
 		</ul>
 	</div>
