--- a/Project.html
+++ b/Project.html
@@ -26,11 +26,11 @@
 	<!-- end #header -->
 	<div id="menu">
 		<ul>
-			<li><a class="menuLink"><a href="Intro.html"><b>Intro</b></a></li>
+			<li><a class="menuLink" href="Intro.html"><b>Intro</b></a></li>
 			<li><a class="menuLink" href="Working_Paper.html"><b>Working Paper</b></a></li>
 			<li><a class="menuLink" href="People.html"><b>People</b></a></li>
 			<li><a class="menuLink" href="Publication.html"><b>Publication</b></a></li>
-			<li class="current_page_item"><href="Project.html"><b>Project</b></a></li>
+			<li class="current_page_item"><a href="Project.html"><b>Project</b></a></li>
 		</ul>
 
 	</div>
@@ -40,7 +40,7 @@
 			<h3>Project 1</h3><br/>
 				<p>Project 1 Discription<br/>
 			<br/>
-			<h3>Project 2</h3>
+			<h3><b>Project 2</b></h3>
 				<p>Project 2 Discription<br/>
 			<br/>
 			<h3>Project 3</h3>
